--- a/SeSAC Week3 BookLibrary/Base.lproj/Main.storyboard
+++ b/SeSAC Week3 BookLibrary/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,28 +33,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="V8e-XR-FiB">
-                                            <rect key="frame" x="83.5" y="43" width="101.5" height="110.5"/>
+                                            <rect key="frame" x="97.5" y="34.5" width="87.5" height="131.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k52-bq-KpB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="101.5" height="25"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="87.5" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="fjz-Rp-wUD"/>
+                                                        <constraint firstAttribute="height" constant="20" id="fjz-Rp-wUD"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qrl-nC-LX6">
-                                                    <rect key="frame" x="0.0" y="28" width="101.5" height="25"/>
+                                                    <rect key="frame" x="0.0" y="23" width="87.5" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="cwa-Tu-Qit"/>
+                                                        <constraint firstAttribute="height" constant="20" id="cwa-Tu-Qit"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3b-PV-OHb">
-                                                    <rect key="frame" x="0.0" y="56" width="101.5" height="54.5"/>
+                                                    <rect key="frame" x="0.0" y="46" width="87.5" height="85.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -61,13 +62,13 @@
                                             </subviews>
                                         </stackView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="caj-lV-2Ve">
-                                            <rect key="frame" x="5" y="43" width="73.5" height="110.5"/>
+                                            <rect key="frame" x="5" y="34.5" width="87.5" height="131.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="caj-lV-2Ve" secondAttribute="height" multiplier="1:1.5" id="Cfj-1p-f7j"/>
+                                                <constraint firstAttribute="width" secondItem="caj-lV-2Ve" secondAttribute="height" multiplier="1:1.5" id="w2E-E4-K4c"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQf-Ya-dAx">
-                                            <rect key="frame" x="5" y="4" width="180" height="34"/>
+                                            <rect key="frame" x="5" y="4" width="180" height="25.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -75,12 +76,12 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="caj-lV-2Ve" firstAttribute="leading" secondItem="Cpp-kG-MN5" secondAttribute="leading" constant="5" id="2fJ-8Y-zp3"/>
-                                        <constraint firstItem="caj-lV-2Ve" firstAttribute="height" secondItem="Cpp-kG-MN5" secondAttribute="height" multiplier="0.65" id="Adk-tx-m84"/>
                                         <constraint firstAttribute="trailing" secondItem="OQf-Ya-dAx" secondAttribute="trailing" constant="5" id="DZC-6j-cEe"/>
-                                        <constraint firstItem="V8e-XR-FiB" firstAttribute="height" secondItem="Cpp-kG-MN5" secondAttribute="height" multiplier="0.65" id="QXg-1T-fEs"/>
-                                        <constraint firstItem="OQf-Ya-dAx" firstAttribute="height" secondItem="Cpp-kG-MN5" secondAttribute="height" multiplier="0.2" id="ST6-j2-ek4"/>
+                                        <constraint firstAttribute="bottom" secondItem="caj-lV-2Ve" secondAttribute="bottom" constant="4" id="M6R-qg-398"/>
+                                        <constraint firstItem="OQf-Ya-dAx" firstAttribute="height" secondItem="Cpp-kG-MN5" secondAttribute="height" multiplier="0.15" id="ST6-j2-ek4"/>
                                         <constraint firstItem="caj-lV-2Ve" firstAttribute="top" secondItem="OQf-Ya-dAx" secondAttribute="bottom" constant="5" id="cyP-V2-Yr3"/>
                                         <constraint firstAttribute="trailing" secondItem="V8e-XR-FiB" secondAttribute="trailing" constant="5" id="eKr-72-V8y"/>
+                                        <constraint firstAttribute="bottom" secondItem="V8e-XR-FiB" secondAttribute="bottom" constant="4" id="hxa-Ua-yc3"/>
                                         <constraint firstItem="V8e-XR-FiB" firstAttribute="leading" secondItem="caj-lV-2Ve" secondAttribute="trailing" constant="5" id="mRy-ZZ-LSr"/>
                                         <constraint firstItem="V8e-XR-FiB" firstAttribute="top" secondItem="OQf-Ya-dAx" secondAttribute="bottom" constant="5" id="mp1-3k-ob4"/>
                                         <constraint firstItem="OQf-Ya-dAx" firstAttribute="top" secondItem="Cpp-kG-MN5" secondAttribute="top" constant="4" id="nGk-xb-jUP"/>
@@ -107,6 +108,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3R-ST-C5Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="639.13043478260875" y="195.53571428571428"/>
+        </scene>
+        <!--First View Controller-->
+        <scene sceneID="PQ1-C4-e3g">
+            <objects>
+                <viewController storyboardIdentifier="FirstViewController" id="iUQ-jg-Fjj" customClass="FirstViewController" customModule="SeSAC_Week3_BookLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rar-ip-qxF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fdp-7J-iwG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ikw-Iz-88q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1544.9275362318842" y="-183.48214285714286"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="l3F-8c-1UV">
+            <objects>
+                <viewController storyboardIdentifier="SecondViewController" id="ldS-TB-X9H" customClass="SecondViewController" customModule="SeSAC_Week3_BookLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b0a-mT-v7N">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLn-aJ-nL6">
+                                <rect key="frame" x="174" y="383" width="67" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="ldS-TB-X9H" eventType="touchUpInside" id="WjW-2w-FZq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="25P-kO-dpi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbn-JD-TIi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1545" y="636"/>
+        </scene>
+        <!--Third View Controller-->
+        <scene sceneID="bGd-Q6-aoE">
+            <objects>
+                <viewController storyboardIdentifier="ThirdViewController" id="YNZ-uQ-MSA" customClass="ThirdViewController" customModule="SeSAC_Week3_BookLibrary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7cw-Qs-jrQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="qg5-H1-ch5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Edh-gu-WPK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2436" y="635"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VbG-6L-d51">
